--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main{
     background-color: var(--clr-dark-grayish-blue);
     padding: 30px;
     min-width: 300px;
+    /* min-height: 300px; */
     max-width: 500px;
     justify-content: center;
     flex-wrap: wrap;
@@ -34,8 +35,9 @@ main{
 span{
      text-align: center;
      text-transform: uppercase;
-     letter-spacing: 3px;
+     letter-spacing: 5px;
      color: var(--clr-primary-green);
+     font-size: 12px;
 }
 p{
     text-align: center;
@@ -43,9 +45,10 @@ p{
     max-inline-size: 451px;
     text-wrap: wrap;
     width: 100%;
+    font-size: 28px
     /* text-wrap: balance; */
 }
-    
+
 .divider > img{
     text-align: center;
     margin-bottom: 15px;
@@ -73,6 +76,7 @@ button{
 button:hover,button:focus{
     box-shadow: 0px 0px 35px  3px var(--clr-primary-green);
     background-color: var(--clr-primary-green);
+    cursor: pointer;
 
 }
 /* 
